--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "framer-motion": "^12.23.11",
     "lucide-react": "^0.525.0",
+    "node-pg-migrate": "^8.0.3",
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
