--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/icons": "^6.0.0",
     "@headlessui/react": "^2.2.6",
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -16,6 +17,8 @@
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.13.2",
     "express": "^5.1.0",
     "framer-motion": "^12.23.11",
     "lucide-react": "^0.525.0",
